# opz_ha

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  config.yaml  config.yaml.dist  opz_ha.py  requirements.txt  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  index.rst
opz_ha/: __init__.py  cli.py  defaults.py  devices.py  logtools.py  utils.py
opz_ha/launcher/: gdorelay.py  onewire.py  reedswitch.py
