[metadata]
name = opz_ha
description = "Tiny remote MQTT relay of GPIO data from Orange Pi Zero single-board computers"
long_description = file: README.rst
version = attr: opz_ha.__version__
author = Aaron Mildenstein
url = http://github.com/untergeek/opz_ha
license = Apache License, Version 2.0
keywords = orangepi, mqtt, home, automation,
classifiers =
    Topic :: Home Automation
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
install_requires = 
    OPi.GPIO
    paho-mqtt
    click>=6.7
    pyyaml>=3.10
setup_requires = 
    OPi.GPIO
    paho-mqtt
    click>=6.7
    pyyaml>=3.10
packages = opz_ha
include_package_data = True
tests_require =
    mock
    nose
    coverage
    nosexcover

[options.entry_points]
console_scripts = 
    opz_ha_relay = opz_ha.cli:cli

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=1

